--- a/index.html
+++ b/index.html
@@ -6,5 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Furniking Store</title>
   </head>
-  <body></body>
+  <body>
+    <!--================= header section start =================== -->
+
+    <!--================= header section end =================== -->
+
+    <!--================= home section start =================== -->
+
+    <!--================= home section end =================== -->
+
+    <!--================= shop section start =================== -->
+
+    <!--================= shop section end =================== -->
+
+    <!--================= blog section start =================== -->
+
+    <!--================= blog section end =================== -->
+
+    <!--================= about section start =================== -->
+
+    <!--================= about section end =================== -->
+
+    <!--================= contact us section start =================== -->
+
+    <!--================= contact us section end =================== -->
+  </body>
 </html>
