--- a/index.html
+++ b/index.html
@@ -4,12 +4,69 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <title>Furniking Store</title>
   </head>
   <body>
-    <!--================= header section start =================== -->
+    <!-- ================= header section start =================== -->
+    <header>
+      <div class="header-line-one">
+        <div class="container">
+          <p class="welcome">Welcome to our online shop</p>
+          <div class="login-logout">
+            <p class="currency">English (USD)</p>
+            <img src="images/arrow.png" alt="arrow" />
+            <div class="vertical-bar"></div>
+            <p>Login or Sign up</p>
+          </div>
+        </div>
+      </div>
 
-    <!--================= header section end =================== -->
+      <!-- =========== Header line two ========== -->
+      <div class="header-line-two">
+        <div class="container">
+          <div class="logo-name">
+            <img src="images/logo.png" alt="logo" />
+            <p>Furniking</p>
+          </div>
+
+          <form class="Search-bar-form" action="">
+            <input type="text" placeholder="Search here" />
+            <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
+
+          <div class="bar-notif-profile">
+            <img src="images/ic_shop.png" alt="shop" />
+            <img src="images/ic_notification.png" alt="notification" />
+            <img src="images/ic_user.png" alt="user" />
+          </div>
+        </div>
+      </div>
+
+      <!-- =========== Header line three ========== -->
+      <div class="header-line-three">
+        <div class="container">
+          <div class="all-collections">
+            <img src="images/menu.png" alt="menu" />
+            <p class="all-collections-paraph">ALL COLLECTIONS</p>
+          </div>
+
+          <nav class="navbar">
+            <a href="#home">HOME</a>
+            <a href="#shop">SHOP</a>
+            <a href="#blog">BLOG</a>
+            <a href="#about">ABOUT</a>
+            <a href="#contact">CONTACT US</a>
+          </nav>
+        </div>
+      </div>
+    </header>
 
     <!--================= home section start =================== -->
 
